--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
+  },
+  "dependencies": {
+    "@discord-message-components/vue": "^0.2.1"
   }
 }
